# tertiary-offline-web

./: .gitignore  README.md  THE-STUFF-TO-DO-NOW.md  index.html  package-lock.json  package.json  start-from-here.md  vite.config.ts
.claude/agents/: documentation.md  engineer.md  project-manager.md  ux-designer.md
.github/workflows/: build.yml  release.yml
docs/: acceptable-use.md  plan.md  reference.md  user-guide.md  ux-design.md
scripts/: run.sh
src/: auth.ts  banners.ts  brand.ts  dom.ts  format.ts  legal.ts  main.ts  resume.ts  settings.ts  store.ts  tauri.ts  theme.ts
src-tauri/: Cargo.toml  PACKAGING.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  crawl.rs  fsutil.rs  images.rs  lib.rs  main.rs  render.rs  scrape.rs  settings.rs
src/screens/: images.ts  library.ts  newscrape.ts  progress.ts  results.ts  settings.ts  shell.ts  signin.ts
src/styles/: app.css  brand.css
