[package]
name = "interlinedlist-offline"
version = "0.0.1"
description = "InterlinedList Offline — mirror web pages to a local folder"
authors = ["InterlinedList"]
edition = "2021"
rust-version = "1.77.2"

# The library name the generated bindings look for.
[lib]
name = "interlinedlist_offline_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP + HTML parsing for the single-page scrape.
# rustls (not native-tls) to avoid system OpenSSL issues.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
scraper = "0.20"
url = "2"

# robots.txt parsing (User-agent / Disallow / Allow / Crawl-delay).
texting_robots = "0.2"
