[package]
name = "interlinedlist-offline"
version = "0.1.0"
description = "Offline Web — mirror web pages to a local folder"
authors = ["InterlinedList"]
edition = "2021"
rust-version = "1.85"

# The library name the generated bindings look for.
[lib]
name = "interlinedlist_offline_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
# Native folder picker (FR-OUT-1/2 "Change…" chooser for output + mirrors root).
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP + HTML parsing for the single-page scrape.
# rustls (not native-tls) to avoid system OpenSSL issues.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
scraper = "0.20"
url = "2"

# OS keychain for the auth token (macOS Keychain / Windows Credential Manager /
# Linux Secret Service). Only the Bearer sync token + account email are stored.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# robots.txt parsing (User-agent / Disallow / Allow / Crawl-delay).
texting_robots = "0.2"

# Cross-platform free-space query for the pre-Start low-space warning
# (FR-OUT-2) and the Storage tab (FR-SET-1). Deliberately lightweight — a thin
# wrapper over statvfs / GetDiskFreeSpaceExW, NOT a heavy system-info crate
# (NFR-SIZE-1). Only the `std` (sync) feature is used.
fs4 = { version = "0.13", default-features = false, features = ["sync"] }

# Opt-in JavaScript rendering (M4). Drives a SYSTEM-installed Chrome/Chromium
# over the DevTools Protocol (CDP) — it does NOT bundle or download a browser
# (NFR-SIZE-1 / Risk R2). The size-heavy `fetch`/`zip`/`walkdir`/`directories`
# features (which would download Chromium) are deliberately left OFF; we only
# use CDP with `rustls` TLS to stay consistent with reqwest.
headless_chrome = { version = "1", default-features = false, features = ["rustls"] }

# Built-in auto-update (Q10, NFR-XPLAT-1) — desktop only, with a non-blocking
# update banner in the UI. Endpoints + signing pubkey are configured in
# tauri.conf.json (`plugins.updater`). The mobile targets have no updater.
[target."cfg(any(target_os = \"macos\", target_os = \"windows\", target_os = \"linux\"))".dependencies]
tauri-plugin-updater = "2"
